--- a/ImageRecognizer/ImageRecognizer/Base.lproj/Main.storyboard
+++ b/ImageRecognizer/ImageRecognizer/Base.lproj/Main.storyboard
@@ -16,12 +16,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="saq-r4-ZKq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="saq-r4-ZKq">
                                 <rect key="frame" x="10" y="94" width="394" height="394"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="saq-r4-ZKq" secondAttribute="height" multiplier="1:1" id="KDX-C5-Nvo"/>
                                 </constraints>
                             </imageView>
+                            <navigationBar contentMode="scaleToFill" id="ZjO-sv-2Ml">
+                                <rect key="frame" x="0.0" y="37" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Classify Images" id="QHI-ee-apD">
+                                        <rightBarButtonItems>
+                                            <barButtonItem title="CameraButton" image="camera" catalog="system" id="stn-05-f5L">
+                                                <connections>
+                                                    <action selector="photoTapped:" destination="BYZ-38-t0r" id="KXn-Iz-0Pw"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem title="AlbumButton" image="folder" catalog="system" id="PWw-4j-PhM">
+                                                <connections>
+                                                    <action selector="albumTapped:" destination="BYZ-38-t0r" id="Tg5-Gg-INn"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </rightBarButtonItems>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -31,8 +51,11 @@
                             <constraint firstItem="saq-r4-ZKq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="zEl-pm-mKB"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="saq-r4-ZKq" id="L7w-TZ-sIK"/>
+                        <outlet property="navBar" destination="QHI-ee-apD" id="PO9-gJ-gtb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -41,6 +64,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="camera" catalog="system" width="128" height="94"/>
+        <image name="folder" catalog="system" width="128" height="97"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
